tests/baselines/reference/parserEnumDeclaration6.errors.txt
==== tests/cases/compiler/parserEnumDeclaration6.ts (1 errors) ====
    enum E {
        A = 1,
        B,
        C = 1 << 1,
        D,
        ~
!!! parserEnumDeclaration6.ts(5,5): error TS1061: Enum member must have initializer.
    }